--- a/scss/style.css
+++ b/scss/style.css
@@ -1912,13 +1912,13 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   .photos {
     max-width: 900px;
     min-height: 590px;
+    margin-bottom: 60px;
   }
 }
 @media screen and (max-width: 900px) {
   .photos {
     max-width: 800px;
     min-height: 525px;
-    margin: 0 auto 60px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -2488,19 +2488,137 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   margin: 0 auto;
   font-family: "Rubik", sans-serif;
 }
+@media screen and (max-width: 1440px) {
+  .contacts {
+    max-width: 1440px;
+  }
+}
+@media screen and (max-width: 1233px) {
+  .contacts {
+    max-width: 1024px;
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .contacts {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts {
+    flex-direction: column;
+    max-width: 750px;
+    max-height: 315px;
+  }
+}
+@media screen and (max-width: 610px) {
+  .contacts {
+    max-width: 500px;
+    max-height: 315px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contacts {
+    max-width: 390px;
+    max-height: 1098px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contacts {
+    max-width: 300px;
+  }
+}
 .contacts_left {
   min-width: 1022px;
   display: flex;
   flex-direction: column;
 }
+@media screen and (max-width: 1440px) {
+  .contacts_left {
+    min-width: 850px;
+  }
+}
+@media screen and (max-width: 1233px) {
+  .contacts_left {
+    min-width: 500px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contacts_left {
+    min-width: 390px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .contacts_right {
+    max-width: 590px;
+  }
+}
+@media screen and (max-width: 1233px) {
+  .contacts_right {
+    max-width: 600px;
+    margin: 41px auto 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts_right {
+    max-width: 750px;
+    max-height: 323px;
+  }
+}
+@media screen and (max-width: 610px) {
+  .contacts_right {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contacts_right {
+    max-width: 390px;
+    min-height: 233px;
+    margin: 18px auto 0;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contacts_right {
+    max-width: 300px;
+  }
+}
 .contacts_right__map {
   width: 898px;
   height: 387px;
+}
+@media screen and (max-width: 1233px) {
+  .contacts_right__map {
+    max-width: 600px;
+  }
+}
+@media screen and (max-width: 610px) {
+  .contacts_right__map {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contacts_right__map {
+    max-width: 390px;
+  }
 }
 
 .contacts-inner {
   display: flex;
   margin-top: 65px;
+}
+@media screen and (max-width: 1233px) {
+  .contacts-inner {
+    flex-direction: column;
+    margin-top: 25px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts-inner {
+    flex-direction: row;
+    margin-top: 35px;
+  }
 }
 .contacts-inner_left, .contacts-inner_right {
   display: inherit;
@@ -2511,15 +2629,75 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   padding: 26px;
   background-color: #EEF3FD;
 }
+@media screen and (max-width: 1233px) {
+  .contacts-inner_left, .contacts-inner_right {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 1fr;
+    max-height: 100px;
+    margin-top: 30px;
+    padding: 18px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts-inner_left, .contacts-inner_right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-height: 155px;
+    margin-top: 0;
+    padding: 26px;
+  }
+}
+@media screen and (max-width: 610px) {
+  .contacts-inner_left, .contacts-inner_right {
+    padding: 18px 26px;
+  }
+}
 .contacts-inner_left {
-  min-width: 397px;
   max-width: 397px;
   margin-left: 245px;
 }
+@media screen and (max-width: 1440px) {
+  .contacts-inner_left {
+    margin-left: 100px;
+  }
+}
+@media screen and (max-width: 1233px) {
+  .contacts-inner_left {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .contacts-inner_left {
+    margin-left: 50px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts-inner_left {
+    margin-left: 0;
+  }
+}
 .contacts-inner_right {
   max-width: 285px;
-  min-width: 285px;
   margin-left: 14px;
+}
+@media screen and (max-width: 1233px) {
+  .contacts-inner_right {
+    max-width: 397px;
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .contacts-inner_right {
+    margin-left: 50px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts-inner_right {
+    max-width: 244px;
+    margin-left: 20px;
+  }
 }
 
 .contacts-inner_left .content-container__item_bold {
@@ -2537,84 +2715,63 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   margin-top: 10px;
 }
 
-@media screen and (max-width: 1440px) {
-  .contacts {
-    max-width: 1440px;
-  }
-  .contacts_left {
-    min-width: 850px;
-  }
-  .contacts_right {
-    max-width: 590px;
-  }
-  .contacts-inner_left {
-    margin-left: 100px;
-  }
-}
 @media screen and (max-width: 1233px) {
-  .contacts {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1024px;
-    max-height: -moz-fit-content;
-    max-height: fit-content;
+  .contacts-inner_left .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
   }
-  .contacts_left {
-    min-width: 750px;
+  .contacts-inner_left .content-container__item_bold {
+    margin-left: 20px;
+    font-size: 18px;
   }
-  .contacts_right {
-    max-width: 1024px;
-    margin: 41px auto 0;
+  .contacts-inner_left .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
   }
-  .contacts-inner {
-    margin-top: 50px;
+  .contacts-inner_left .content-container__item {
+    margin-top: 5px;
   }
-  .contacts-inner_left, .contacts-inner_right {
-    margin-top: 0;
+  .contacts-inner_right .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
   }
-  .contacts-inner_left {
-    margin-left: 48px;
+  .contacts-inner_right .content-container__item_bold {
+    margin-left: 20px;
+    font-size: 18px;
   }
-  .contacts-inner_right {
-    max-width: 244px;
-    min-width: 244px;
+  .contacts-inner_right .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
+  }
+  .contacts-inner_right .content-container__item {
+    margin-top: 5px;
   }
 }
-@media screen and (max-width: 1024px) {
-  .contacts-inner_left, .contacts-inner_right {
-    margin-top: 0;
+@media screen and (max-width: 610px) {
+  .contacts-inner_left .content-container__icon {
+    margin-bottom: 5px;
   }
-}
-@media screen and (max-width: 768px) {
-  .contacts {
-    max-width: 750px;
-    max-height: 315px;
+  .contacts-inner_left .content-container__item_bold {
+    margin-left: 0px;
   }
-  .contacts_right {
-    max-width: 750px;
-    max-height: 323px;
+  .contacts-inner_left .content-container__item_tiny {
+    margin-left: 0px;
   }
-  .contacts-inner {
-    margin-top: 35px;
+  .contacts-inner_right .content-container__icon {
+    margin-bottom: 5px;
   }
-  .contacts-inner_left, .contacts-inner_right {
-    margin-top: 0;
+  .contacts-inner_right .content-container__item_bold {
+    margin-left: 0px;
+  }
+  .contacts-inner_right .content-container__item_tiny {
+    margin-left: 0px;
   }
 }
 @media screen and (max-width: 480px) {
-  .contacts {
-    max-width: 390px;
-    max-height: 1098px;
-  }
-  .contacts_left {
-    min-width: 390px;
-    margin: 0 auto;
-  }
-  .contacts_right {
-    max-width: 390px;
-    min-height: 233px;
-    margin: 18px auto 0;
-  }
   .contacts-inner {
     flex-direction: column;
     gap: 10px;
@@ -2673,13 +2830,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   }
 }
 @media screen and (max-width: 320px) {
-  .contacts {
-    max-width: 300px;
-    max-height: 1098px;
-  }
-  .contacts_right {
-    max-width: 300px;
-  }
   .contacts-inner {
     max-width: 300px;
   }
@@ -3323,20 +3473,32 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin-left: 100px;
   }
 }
+@media screen and (max-width: 1233px) {
+  .title-container_contacts {
+    margin-top: 50px;
+    margin-left: 0;
+  }
+}
 @media screen and (max-width: 1024px) {
   .title-container_contacts {
     margin-top: 60px;
-    margin-left: -140px;
+    margin-left: 0;
   }
 }
 @media screen and (max-width: 768px) {
   .title-container_contacts {
-    margin-left: 0;
+    margin-left: -75px;
+  }
+}
+@media screen and (max-width: 610px) {
+  .title-container_contacts {
+    margin-left: -50px;
   }
 }
 @media screen and (max-width: 480px) {
   .title-container_contacts {
     margin-top: 39px;
+    margin-left: 0;
   }
 }
 .title-container__icon, .title-container__title {
@@ -3366,7 +3528,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   font-weight: 600;
   color: #D71635;
 }
-@media (max-width: 990px) {
+@media (max-width: 1024px) {
   .title-container__title {
     font-size: 30px;
   }
@@ -3374,6 +3536,12 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 @media screen and (max-width: 768px) {
   .title-container__title {
     margin-left: 21px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .title-container__title {
+    max-width: 350px;
+    font-size: 28px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -3389,17 +3557,25 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   }
 }
 
+@media screen and (max-width: 650px) {
+  .convinience .title-container__icon {
+    margin-bottom: 15px;
+  }
+}
 @media screen and (max-width: 480px) {
   .convinience .title-container__icon {
     margin-bottom: 50px;
-  }
-  .service_bg-white .title-container {
-    margin-top: 0;
   }
 }
 @media screen and (max-width: 320px) {
   .convinience .title-container__icon {
     margin-bottom: 45px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .service_bg-white .title-container {
+    margin-top: 0;
   }
 }
 .content-container {
