--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -5,21 +5,122 @@
     margin: 0 auto;
     font-family: $main-font;
 
+    @media screen and (max-width: 1440px) {
+        max-width: 1440px;
+    }
+
+    @media screen and (max-width: 1233px) {
+        // display: flex;
+        // flex-wrap: wrap;
+        max-width: 1024px;
+        max-height: fit-content;
+    }
+
+    @media screen and (max-width: 1024px) {
+        max-width: 1000px;
+    }
+
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        max-width: 750px;
+        max-height: 315px;
+    }
+
+    @media screen and (max-width: 610px) {
+        max-width: 500px;
+        max-height: 315px;
+    }
+
+    @media screen and (max-width: 480px) {
+        max-width: 390px;
+        max-height: 1098px;
+    }
+
+    @media screen and (max-width: 320px) {
+        max-width: 300px;
+    }
+
     &_left {
         min-width: 1022px;
         display: flex;
         flex-direction: column;
+
+        @media screen and (max-width: 1440px) {
+            min-width: 850px;
+        }
+
+        @media screen and (max-width: 1233px) {
+            min-width: 500px;
+        }
+
+        @media screen and (max-width: 480px) {
+            min-width: 390px;
+            margin: 0 auto;
+        }
+    }
+
+    &_right {
+        @media screen and (max-width: 1440px) {
+            max-width: 590px;
+        }
+
+        @media screen and (max-width: 1233px) {
+            max-width: 600px;
+            margin: 41px auto 0;
+        }
+
+        @media screen and (max-width: 768px) {
+            max-width: 750px;
+            max-height: 323px;
+        }
+
+        @media screen and (max-width: 610px) {
+            max-width: 500px;
+        }
+
+        @media screen and (max-width: 480px) {
+            max-width: 390px;
+            min-height: 233px;
+            margin: 18px auto 0;
+        }
+
+        @media screen and (max-width: 320px) {
+            max-width: 300px;
+        }
     }
 
     &_right__map {
         width: 898px;
         height: 387px;
+
+        @media screen and (max-width: 1233px) {
+            max-width: 600px;
+        }
+
+        @media screen and (max-width: 610px) {
+            max-width: 500px;
+        }
+
+        @media screen and (max-width: 480px) {
+            max-width: 390px;
+        }
     }
 }
 
 .contacts-inner {
     display: flex;
     margin-top: 65px;
+
+    @media screen and (max-width: 1233px) {
+        flex-direction: column;
+        margin-top: 25px;
+    }
+
+    @media screen and (max-width: 768px) {
+        flex-direction: row;
+        margin-top: 35px;
+    }
+
 
     &_left,
     &_right {
@@ -30,18 +131,72 @@
         margin-top: 0;
         padding: 26px;
         background-color: $bg-color-light;
+
+        @media screen and (max-width: 1233px) {
+            display: grid;
+            grid-template-columns: 1fr 5fr;
+            grid-template-rows: 1fr 1fr;
+            max-height: 100px;
+            margin-top: 30px;
+            padding: 18px;
+        }
+
+        @media screen and (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            max-height: 155px;
+            margin-top: 0;
+            padding: 26px;
+        }
+
+        @media screen and (max-width: 610px) {
+            padding: 18px 26px;
+        }
     }
 
     &_left {
-        min-width: 397px;
+        // min-width: 397px;
         max-width: 397px;
         margin-left: 245px;
+
+        @media screen and (max-width: 1440px) {
+            margin-left: 100px;
+        }
+
+        @media screen and (max-width: 1233px) {
+            margin-left: 0;
+        }
+
+        @media screen and (max-width: 1024px) {
+            margin-left: 50px;
+        }
+
+        @media screen and (max-width: 768px) {
+            margin-left: 0;
+        }
     }
 
     &_right {
         max-width: 285px;
-        min-width: 285px;
+        // min-width: 285px;
         margin-left: 14px;
+
+        @media screen and (max-width: 1233px) {
+            // max-width: 244px;
+            // min-width: 244px;
+            max-width: 397px;
+            margin-left: 0;
+        }
+
+        @media screen and (max-width: 1024px) {
+            margin-left: 50px;
+        }
+
+        @media screen and (max-width: 768px) {
+            max-width: 244px;
+            margin-left: 20px;
+        }
     }
 }
 
@@ -66,110 +221,87 @@
     }
 }
 
-@media screen and (max-width: 1440px) {
-    .contacts {
-        max-width: 1440px;
-
-        &_left {
-            min-width: 850px;
-        }
-
-        &_right {
-            max-width: 590px;
-        }
-    }
-
-    .contacts-inner {
-        &_left {
-            margin-left: 100px;
-        }
-    }
-}
-
 @media screen and (max-width: 1233px) {
-    .contacts {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 1024px;
-        max-height: fit-content;
-
-        &_left {
-            min-width: 750px;
+    .contacts-inner_left {
+        & .content-container__icon {
+            grid-column: 1/2;
+            grid-row: 1/3;
         }
 
-        &_right {
-            max-width: 1024px;
-            margin: 41px auto 0;
+        & .content-container__item_bold {
+            margin-left: 20px;
+            font-size: 18px;
+        }
+
+        & .content-container__item_tiny {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            margin-bottom: 0;
+            margin-left: 20px;
+        }
+
+        & .content-container__item {
+            margin-top: 5px;
         }
     }
 
-    .contacts-inner {
-        margin-top: 50px;
-
-        &_left,
-        &_right {
-            margin-top: 0;
+    .contacts-inner_right {
+        & .content-container__icon {
+            grid-column: 1/2;
+            grid-row: 1/3;
         }
 
-        &_left {
-            margin-left: 48px;
+        & .content-container__item_bold {
+            margin-left: 20px;
+            font-size: 18px;
         }
 
-        &_right {
-            max-width: 244px;
-            min-width: 244px;
+        & .content-container__item_tiny {
+            grid-column: 2/3;
+            grid-row: 2/3;
+            margin-bottom: 0;
+            margin-left: 20px;
+        }
+
+        & .content-container__item {
+            margin-top: 5px;
         }
     }
 }
 
-@media screen and (max-width: 1024px) {
-    .contacts-inner {
+@media screen and (max-width: 610px) {
+    .contacts-inner_left {
 
-        &_left,
-        &_right {
-            margin-top: 0;
+        & .content-container__icon {
+            margin-bottom: 5px;
         }
-    }
-}
 
-@media screen and (max-width: 768px) {
-    .contacts {
-        max-width: 750px;
-        max-height: 315px;
+        & .content-container__item_bold {
+            margin-left: 0px;
+        }
 
-        &_right {
-            max-width: 750px;
-            max-height: 323px;
+        & .content-container__item_tiny {
+            margin-left: 0px;
         }
     }
 
-    .contacts-inner {
-        margin-top: 35px;
+    .contacts-inner_right {
 
-        &_left,
-        &_right {
-            margin-top: 0;
+        & .content-container__icon {
+            margin-bottom: 5px;
+        }
+
+        & .content-container__item_bold {
+            margin-left: 0px;
+        }
+
+        & .content-container__item_tiny {
+            margin-left: 0px;
         }
     }
 }
 
 @media screen and (max-width: 480px) {
-    .contacts {
-        max-width: 390px;
-        max-height: 1098px;
-
-        &_left {
-            min-width: 390px;
-            margin: 0 auto;
-        }
-
-        &_right {
-            max-width: 390px;
-            min-height: 233px;
-            margin: 18px auto 0;
-        }
-    }
-
     .contacts-inner {
         flex-direction: column;
         gap: 10px;
@@ -245,15 +377,6 @@
 }
 
 @media screen and (max-width: 320px) {
-    .contacts {
-        max-width: 300px;
-        max-height: 1098px;
-
-        &_right {
-            max-width: 300px;
-        }
-    }
-
     .contacts-inner {
         max-width: 300px;
 
