--- a/scss/blocks/_photos.scss
+++ b/scss/blocks/_photos.scss
@@ -17,12 +17,12 @@
     @media screen and (max-width: 1024px) {
         max-width: 900px;
         min-height: 590px;
+        margin-bottom: 60px;
     }
 
     @media screen and (max-width: 900px) {
         max-width: 800px;
         min-height: 525px;
-        margin: 0 auto 60px;
     }
 
     @media screen and (max-width: 768px) {
