fix footer, centered btn and contacts

--- a/scss/blocks/_block-btn.scss
+++ b/scss/blocks/_block-btn.scss
@@ -74,28 +74,8 @@
     &_centered {
         max-width: 242px;
         min-width: 242px;
-        margin-right: 594px;
-        margin-left: 594px;
-
-        @media screen and (max-width: 1233px) {
-            margin-right: 408px;
-            margin-left: 408px;
-        }
-
-        @media screen and (max-width: 768px) {
-            margin-right: 283px;
-            margin-left: 283px;
-        }
-
-        @media screen and (max-width: 480px) {
-            margin-right: 104px;
-            margin-left: 104px;
-        }
-
-        @media screen and (max-width: 320px) {
-            margin-right: 58px;
-            margin-left: 58px;
-        }
+        margin-right: calc((100% - 242px)/2);
+        margin-left: calc((100% - 242px)/2);
 
         &::after {
             position: absolute;
