--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -10,8 +10,6 @@
     }
 
     @media screen and (max-width: 1233px) {
-        // display: flex;
-        // flex-wrap: wrap;
         max-width: 1024px;
         max-height: fit-content;
     }
@@ -121,6 +119,17 @@
         margin-top: 35px;
     }
 
+    @media screen and (max-width:480px) {
+        flex-direction: column;
+        gap: 10px;
+        max-width: 340px;
+        margin: 34px auto 0;
+    }
+
+    @media screen and (max-width: 320px) {
+        max-width: 300px;
+        margin: 34px 0 0;
+    }
 
     &_left,
     &_right {
@@ -153,10 +162,22 @@
         @media screen and (max-width: 610px) {
             padding: 18px 26px;
         }
+
+        @media screen and (max-width: 480px) {
+            display: grid;
+            grid-template-columns: 1fr 5fr;
+            grid-template-rows: 1fr 1fr;
+            min-width: 340px;
+            margin: 0 auto;
+            padding: 16px 20px 20px 8px;
+        }
+
+        @media screen and (max-width: 320px) {
+            min-width: 300px;
+        }
     }
 
     &_left {
-        // min-width: 397px;
         max-width: 397px;
         margin-left: 245px;
 
@@ -175,16 +196,22 @@
         @media screen and (max-width: 768px) {
             margin-left: 0;
         }
+
+        @media screen and (max-width: 480px) {
+            max-height: 100px;
+            gap: 0;
+        }
+
+        @media screen and (max-width: 320px) {
+            margin-top: 0;
+        }
     }
 
     &_right {
         max-width: 285px;
-        // min-width: 285px;
         margin-left: 14px;
 
         @media screen and (max-width: 1233px) {
-            // max-width: 244px;
-            // min-width: 244px;
             max-width: 397px;
             margin-left: 0;
         }
@@ -197,16 +224,47 @@
             max-width: 244px;
             margin-left: 20px;
         }
+
+        @media screen and (max-width: 480px) {
+            max-height: 80px;
+            gap: 0;
+        }
     }
 }
 
 .contacts-inner_left {
     & .content-container__item_bold {
         font-size: 20px;
+
+        @media screen and (max-width: 1233px) {
+            margin-left: 20px;
+            font-size: 18px;
+        }
+
+        @media screen and (max-width: 610px) {
+            margin-left: 0px;
+        }
+
+        @media screen and (max-width: 480px) {
+            margin-left: 20px;
+            font-size: 18px;
+        }
+
+        @media screen and (max-width: 320px) {
+            font-size: 16px;
+        }
     }
 
     & .content-container__item {
         margin-top: 10px;
+
+        @media screen and (max-width: 1233px) {
+            margin-top: 5px;
+        }
+
+        @media screen and (max-width: 480px) {
+            margin-top: 5px;
+        }
     }
 }
 
@@ -214,204 +272,125 @@
     & .content-container__item_bold {
         font-size: 20px;
         color: $text-color-main;
+
+        @media screen and (max-width: 1233px) {
+            margin-left: 20px;
+            font-size: 18px;
+        }
+
+        @media screen and (max-width: 610px) {
+            margin-left: 0px;
+        }
+
+        @media screen and (max-width: 480px) {
+            margin-left: 20px;
+            font-size: 18px;
+        }
+
+        @media screen and (max-width: 320px) {
+            font-size: 16px;
+        }
     }
 
     & .content-container__item {
         margin-top: 10px;
+
+        @media screen and (max-width: 1233px) {
+            margin-top: 5px;
+        }
+
+        @media screen and (max-width: 480px) {
+            margin-top: 5px;
+        }
+
+        @media screen and (max-width: 320px) {
+            margin-top: 5px;
+        }
     }
 }
 
 @media screen and (max-width: 1233px) {
     .contacts-inner_left {
         & .content-container__icon {
-            grid-column: 1/2;
-            grid-row: 1/3;
-        }
+            @media screen and (max-width: 1233px) {
+                grid-column: 1/2;
+                grid-row: 1/3;
+            }
 
-        & .content-container__item_bold {
-            margin-left: 20px;
-            font-size: 18px;
+            @media screen and (max-width: 610px) {
+                margin-bottom: 5px;
+            }
+
+            @media screen and (max-width: 480px) {
+                grid-column: 1/2;
+                grid-row: 1/3;
+            }
         }
 
         & .content-container__item_tiny {
-            grid-column: 2/3;
-            grid-row: 2/3;
-            margin-bottom: 0;
-            margin-left: 20px;
-        }
+            @media screen and (max-width: 1233px) {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                margin-bottom: 0;
+                margin-left: 20px;
+            }
 
-        & .content-container__item {
-            margin-top: 5px;
+            @media screen and (max-width: 610px) {
+                margin-left: 0px;
+            }
+
+            @media screen and (max-width: 480px) {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                margin-bottom: 0;
+                margin-left: 20px;
+            }
+
+            @media screen and (max-width: 320px) {
+                font-size: 12px;
+            }
         }
     }
 
     .contacts-inner_right {
         & .content-container__icon {
-            grid-column: 1/2;
-            grid-row: 1/3;
-        }
+            @media screen and (max-width: 1233px) {
+                grid-column: 1/2;
+                grid-row: 1/3;
+            }
 
-        & .content-container__item_bold {
-            margin-left: 20px;
-            font-size: 18px;
-        }
+            @media screen and (max-width: 610px) {
+                margin-bottom: 5px;
+            }
 
-        & .content-container__item_tiny {
-            grid-column: 2/3;
-            grid-row: 2/3;
-            margin-bottom: 0;
-            margin-left: 20px;
-        }
-
-        & .content-container__item {
-            margin-top: 5px;
-        }
-    }
-}
-
-@media screen and (max-width: 610px) {
-    .contacts-inner_left {
-
-        & .content-container__icon {
-            margin-bottom: 5px;
-        }
-
-        & .content-container__item_bold {
-            margin-left: 0px;
+            @media screen and (max-width: 480px) {
+                grid-column: 1/2;
+                grid-row: 1/3;
+            }
         }
 
         & .content-container__item_tiny {
-            margin-left: 0px;
-        }
-    }
+            @media screen and (max-width: 1233px) {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                margin-bottom: 0;
+                margin-left: 20px;
+            }
 
-    .contacts-inner_right {
+            @media screen and (max-width: 610px) {
+                margin-left: 0px;
+            }
 
-        & .content-container__icon {
-            margin-bottom: 5px;
-        }
+            @media screen and (max-width: 480px) {
+                grid-column: 2/3;
+                grid-row: 2/3;
+                margin-bottom: 0;
+                margin-left: 20px;
+            }
 
-        & .content-container__item_bold {
-            margin-left: 0px;
-        }
-
-        & .content-container__item_tiny {
-            margin-left: 0px;
-        }
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .contacts-inner {
-        flex-direction: column;
-        gap: 10px;
-        max-width: 340px;
-        margin: 34px auto 0;
-
-        &_left,
-        &_right {
-            display: grid;
-            grid-template-columns: 1fr 5fr;
-            grid-template-rows: 1fr 1fr;
-            min-width: 340px;
-            margin: 0 auto;
-            padding: 16px 20px 20px 8px;
-        }
-
-        &_left {
-            max-height: 100px;
-            gap: 0;
-        }
-
-        &_right {
-            max-height: 80px;
-            gap: 0;
-        }
-    }
-
-    .contacts-inner_left {
-        & .content-container__icon {
-            grid-column: 1/2;
-            grid-row: 1/3;
-        }
-
-        & .content-container__item_bold {
-            margin-left: 20px;
-            font-size: 18px;
-        }
-
-        & .content-container__item_tiny {
-            grid-column: 2/3;
-            grid-row: 2/3;
-            margin-bottom: 0;
-            margin-left: 20px;
-        }
-
-        & .content-container__item {
-            margin-top: 5px;
-        }
-    }
-
-    .contacts-inner_right {
-        & .content-container__icon {
-            grid-column: 1/2;
-            grid-row: 1/3;
-        }
-
-        & .content-container__item_bold {
-            margin-left: 20px;
-            font-size: 18px;
-        }
-
-        & .content-container__item_tiny {
-            grid-column: 2/3;
-            grid-row: 2/3;
-            margin-bottom: 0;
-            margin-left: 20px;
-        }
-
-        & .content-container__item {
-            margin-top: 5px;
-        }
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .contacts-inner {
-        max-width: 300px;
-
-        &_left,
-        &_right {
-            min-width: 300px;
-        }
-
-        &_left {
-            margin-top: 0;
-        }
-    }
-
-    .contacts-inner_left {
-
-        & .content-container__item_bold {
-            font-size: 16px;
-        }
-
-        & .content-container__item_tiny {
-            font-size: 12px;
-        }
-    }
-
-    .contacts-inner_right {
-        & .content-container__item_bold {
-            font-size: 16px;
-        }
-
-        & .content-container__item_tiny {
-            font-size: 12px;
-        }
-
-        & .content-container__item {
-            margin-top: 5px;
+            @media screen and (max-width: 320px) {
+                font-size: 12px;
+            }
         }
     }
 }
