--- a/scss/style.css
+++ b/scss/style.css
@@ -2620,6 +2620,20 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin-top: 35px;
   }
 }
+@media screen and (max-width: 480px) {
+  .contacts-inner {
+    flex-direction: column;
+    gap: 10px;
+    max-width: 340px;
+    margin: 34px auto 0;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contacts-inner {
+    max-width: 300px;
+    margin: 34px 0 0;
+  }
+}
 .contacts-inner_left, .contacts-inner_right {
   display: inherit;
   flex-direction: column;
@@ -2654,6 +2668,21 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     padding: 18px 26px;
   }
 }
+@media screen and (max-width: 480px) {
+  .contacts-inner_left, .contacts-inner_right {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 1fr;
+    min-width: 340px;
+    margin: 0 auto;
+    padding: 16px 20px 20px 8px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contacts-inner_left, .contacts-inner_right {
+    min-width: 300px;
+  }
+}
 .contacts-inner_left {
   max-width: 397px;
   margin-left: 245px;
@@ -2678,6 +2707,17 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin-left: 0;
   }
 }
+@media screen and (max-width: 480px) {
+  .contacts-inner_left {
+    max-height: 100px;
+    gap: 0;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contacts-inner_left {
+    margin-top: 0;
+  }
+}
 .contacts-inner_right {
   max-width: 285px;
   margin-left: 14px;
@@ -2699,160 +2739,181 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin-left: 20px;
   }
 }
+@media screen and (max-width: 480px) {
+  .contacts-inner_right {
+    max-height: 80px;
+    gap: 0;
+  }
+}
 
 .contacts-inner_left .content-container__item_bold {
   font-size: 20px;
 }
+@media screen and (max-width: 1233px) {
+  .contacts-inner_left .content-container__item_bold {
+    margin-left: 20px;
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 610px) {
+  .contacts-inner_left .content-container__item_bold {
+    margin-left: 0px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contacts-inner_left .content-container__item_bold {
+    margin-left: 20px;
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .contacts-inner_left .content-container__item_bold {
+    font-size: 16px;
+  }
+}
 .contacts-inner_left .content-container__item {
   margin-top: 10px;
+}
+@media screen and (max-width: 1233px) {
+  .contacts-inner_left .content-container__item {
+    margin-top: 5px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contacts-inner_left .content-container__item {
+    margin-top: 5px;
+  }
 }
 
 .contacts-inner_right .content-container__item_bold {
   font-size: 20px;
   color: #000000;
 }
-.contacts-inner_right .content-container__item {
-  margin-top: 10px;
-}
-
 @media screen and (max-width: 1233px) {
-  .contacts-inner_left .content-container__icon {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
-  .contacts-inner_left .content-container__item_bold {
-    margin-left: 20px;
-    font-size: 18px;
-  }
-  .contacts-inner_left .content-container__item_tiny {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-bottom: 0;
-    margin-left: 20px;
-  }
-  .contacts-inner_left .content-container__item {
-    margin-top: 5px;
-  }
-  .contacts-inner_right .content-container__icon {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
   .contacts-inner_right .content-container__item_bold {
     margin-left: 20px;
     font-size: 18px;
-  }
-  .contacts-inner_right .content-container__item_tiny {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-bottom: 0;
-    margin-left: 20px;
-  }
-  .contacts-inner_right .content-container__item {
-    margin-top: 5px;
   }
 }
 @media screen and (max-width: 610px) {
-  .contacts-inner_left .content-container__icon {
-    margin-bottom: 5px;
-  }
-  .contacts-inner_left .content-container__item_bold {
-    margin-left: 0px;
-  }
-  .contacts-inner_left .content-container__item_tiny {
-    margin-left: 0px;
-  }
-  .contacts-inner_right .content-container__icon {
-    margin-bottom: 5px;
-  }
   .contacts-inner_right .content-container__item_bold {
-    margin-left: 0px;
-  }
-  .contacts-inner_right .content-container__item_tiny {
     margin-left: 0px;
   }
 }
 @media screen and (max-width: 480px) {
-  .contacts-inner {
-    flex-direction: column;
-    gap: 10px;
-    max-width: 340px;
-    margin: 34px auto 0;
-  }
-  .contacts-inner_left, .contacts-inner_right {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 1fr;
-    min-width: 340px;
-    margin: 0 auto;
-    padding: 16px 20px 20px 8px;
-  }
-  .contacts-inner_left {
-    max-height: 100px;
-    gap: 0;
-  }
-  .contacts-inner_right {
-    max-height: 80px;
-    gap: 0;
-  }
-  .contacts-inner_left .content-container__icon {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
-  .contacts-inner_left .content-container__item_bold {
-    margin-left: 20px;
-    font-size: 18px;
-  }
-  .contacts-inner_left .content-container__item_tiny {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-bottom: 0;
-    margin-left: 20px;
-  }
-  .contacts-inner_left .content-container__item {
-    margin-top: 5px;
-  }
-  .contacts-inner_right .content-container__icon {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
   .contacts-inner_right .content-container__item_bold {
     margin-left: 20px;
     font-size: 18px;
   }
-  .contacts-inner_right .content-container__item_tiny {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-bottom: 0;
-    margin-left: 20px;
+}
+@media screen and (max-width: 320px) {
+  .contacts-inner_right .content-container__item_bold {
+    font-size: 16px;
   }
+}
+.contacts-inner_right .content-container__item {
+  margin-top: 10px;
+}
+@media screen and (max-width: 1233px) {
+  .contacts-inner_right .content-container__item {
+    margin-top: 5px;
+  }
+}
+@media screen and (max-width: 480px) {
   .contacts-inner_right .content-container__item {
     margin-top: 5px;
   }
 }
 @media screen and (max-width: 320px) {
-  .contacts-inner {
-    max-width: 300px;
+  .contacts-inner_right .content-container__item {
+    margin-top: 5px;
   }
-  .contacts-inner_left, .contacts-inner_right {
-    min-width: 300px;
+}
+
+@media screen and (max-width: 1233px) and (max-width: 1233px) {
+  .contacts-inner_left .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
   }
-  .contacts-inner_left {
-    margin-top: 0;
+}
+@media screen and (max-width: 1233px) and (max-width: 610px) {
+  .contacts-inner_left .content-container__icon {
+    margin-bottom: 5px;
   }
-  .contacts-inner_left .content-container__item_bold {
-    font-size: 16px;
+}
+@media screen and (max-width: 1233px) and (max-width: 480px) {
+  .contacts-inner_left .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
   }
+}
+@media screen and (max-width: 1233px) and (max-width: 1233px) {
+  .contacts-inner_left .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 610px) {
+  .contacts-inner_left .content-container__item_tiny {
+    margin-left: 0px;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 480px) {
+  .contacts-inner_left .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 320px) {
   .contacts-inner_left .content-container__item_tiny {
     font-size: 12px;
   }
-  .contacts-inner_right .content-container__item_bold {
-    font-size: 16px;
+}
+@media screen and (max-width: 1233px) and (max-width: 1233px) {
+  .contacts-inner_right .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
   }
+}
+@media screen and (max-width: 1233px) and (max-width: 610px) {
+  .contacts-inner_right .content-container__icon {
+    margin-bottom: 5px;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 480px) {
+  .contacts-inner_right .content-container__icon {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 1233px) {
+  .contacts-inner_right .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 610px) {
+  .contacts-inner_right .content-container__item_tiny {
+    margin-left: 0px;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 480px) {
+  .contacts-inner_right .content-container__item_tiny {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    margin-left: 20px;
+  }
+}
+@media screen and (max-width: 1233px) and (max-width: 320px) {
   .contacts-inner_right .content-container__item_tiny {
     font-size: 12px;
-  }
-  .contacts-inner_right .content-container__item {
-    margin-top: 5px;
   }
 }
 .footer {
@@ -2865,6 +2926,34 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   font-weight: 400;
   background-color: #FFFFFF;
 }
+@media screen and (max-width: 1440px) {
+  .footer {
+    max-width: 1440px;
+  }
+}
+@media screen and (max-width: 1233px) {
+  .footer {
+    max-width: 1024px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer {
+    flex-wrap: wrap;
+    max-width: 750px;
+    min-width: 750px;
+    max-height: 383px;
+    margin: 350px auto 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer {
+    flex-direction: column;
+    max-width: 390px;
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+    margin: 0;
+  }
+}
 
 .footer-logo {
   display: flex;
@@ -2874,14 +2963,63 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   margin-bottom: 116px;
   margin-left: 245px;
 }
+@media screen and (max-width: 1440px) {
+  .footer-logo {
+    margin-left: 100px;
+  }
+}
+@media screen and (max-width: 1233px) {
+  .footer-logo {
+    margin-top: 81px;
+    margin-left: 50px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer-logo {
+    flex-direction: row;
+    max-height: 50px;
+    margin-top: 52px;
+    margin-bottom: 48px;
+    margin-left: 48px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer-logo {
+    flex-direction: column;
+    margin-top: 35px;
+    margin-left: 26px;
+  }
+}
 .footer-logo__image {
   max-width: 208px;
   margin-bottom: 20px;
+}
+@media screen and (max-width: 768px) {
+  .footer-logo__image {
+    min-height: 50px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer-logo__image {
+    margin-bottom: 11px;
+  }
 }
 .footer-logo__text {
   max-width: 245px;
   font-size: 17px;
   color: #525252;
+}
+@media screen and (max-width: 768px) {
+  .footer-logo__text {
+    min-width: 250px;
+    margin-left: 42px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer-logo__text {
+    margin-left: 0;
+  }
 }
 
 .footer-menu {
@@ -2891,10 +3029,39 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   margin-top: 75px;
   margin-left: 253px;
 }
+@media screen and (max-width: 1233px) {
+  .footer-menu {
+    margin-left: 140px;
+  }
+}
+@media screen and (max-width: 980px) {
+  .footer-menu {
+    margin-left: 70px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer-menu {
+    margin-top: 0;
+    margin-bottom: 43px;
+    margin-left: 48px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer-menu {
+    margin-top: 31px;
+    margin-bottom: 24px;
+    margin-left: 26px;
+  }
+}
 .footer-menu__link {
   font-size: 18px;
   line-height: 27px;
   color: #000000;
+}
+@media screen and (max-width: 480px) {
+  .footer-menu__link {
+    font-size: 16px;
+  }
 }
 
 .footer-contacts {
@@ -2902,178 +3069,82 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   flex-direction: column;
   margin-left: 166px;
 }
+@media screen and (max-width: 1233px) {
+  .footer-contacts {
+    margin-left: 80px;
+  }
+}
+@media screen and (max-width: 980px) {
+  .footer-contacts {
+    margin-left: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer-contacts {
+    margin-left: 26px;
+  }
+}
 .footer-contacts_top {
   margin-top: 75px;
   margin-left: 0;
+}
+@media screen and (max-width: 768px) {
+  .footer-contacts_top {
+    margin-top: 0;
+  }
 }
 .footer-contacts_bottom {
   max-width: 368px;
   margin-top: 45px;
   margin-left: 0;
 }
-.footer-contacts .content-container__item_bold {
-  font-size: 30px;
-}
-
-@media screen and (max-width: 1440px) {
-  .footer {
-    max-width: 1440px;
-    min-width: 1440px;
-  }
-  .footer-logo {
-    margin-left: 100px;
-  }
-}
 @media screen and (max-width: 1233px) {
-  .footer {
-    max-width: 1024px;
-    min-width: 1024px;
-  }
-  .footer-logo {
-    margin-top: 81px;
-    margin-left: 50px;
-  }
-  .footer-menu {
-    margin-left: 140px;
-  }
-  .footer-contacts {
-    margin-left: 80px;
-  }
-  .footer-contacts_top {
-    margin-left: 0;
-  }
   .footer-contacts_bottom {
     max-width: 280px;
     margin-top: 20px;
-    margin-left: 0;
-  }
-}
-@media screen and (max-width: 1024px) {
-  .footer-contacts_top {
-    margin-left: 0;
-  }
-  .footer-contacts_bottom {
-    margin-left: 0;
   }
 }
 @media screen and (max-width: 768px) {
-  .footer {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 750px;
-    min-width: 750px;
-    max-height: 383px;
-    margin: 400px auto 0;
-  }
-  .footer-logo {
-    flex-direction: row;
-    max-height: 50px;
-    margin-top: 52px;
-    margin-bottom: 48px;
-    margin-left: 48px;
-  }
-  .footer-logo__image {
-    max-width: 208px;
-    min-height: 50px;
-    margin-bottom: 0;
-  }
-  .footer-logo__text {
-    min-width: 250px;
-    margin-left: 42px;
-  }
-  .footer-menu {
-    margin-top: 0;
-    margin-bottom: 43px;
-    margin-left: 48px;
-  }
-  .footer-contacts {
-    display: flex;
-    flex-direction: column;
-    margin-left: 26px;
-  }
-  .footer-contacts_top {
-    margin-top: 0;
-    margin-left: 0;
-  }
   .footer-contacts_bottom {
     max-width: 368px;
     margin-top: 50px;
-    margin-left: 0;
   }
-  .footer-contacts_bottom .content-container__item_red {
-    font-size: 18px;
-  }
-  .footer-contacts .content-container__item {
-    max-width: 368px;
-  }
-  .footer-contacts .content-container__item_bold {
-    font-size: 30px;
+}
+@media screen and (max-width: 640px) {
+  .footer-contacts_bottom {
+    max-width: 250px;
   }
 }
 @media screen and (max-width: 480px) {
-  .footer {
-    flex-direction: column;
-    max-width: 390px;
-    min-width: 390px;
-    max-height: -moz-fit-content;
-    max-height: fit-content;
-    margin: 0 auto;
-  }
-  .footer-logo {
-    flex-direction: column;
-    max-height: 50px;
-    margin-top: 35px;
-    margin-left: 26px;
-  }
-  .footer-logo__image {
-    margin-bottom: 11px;
-  }
-  .footer-logo__text {
-    margin-left: 0;
-  }
-  .footer-menu {
-    margin-top: 31px;
-    margin-bottom: 24px;
-    margin-left: 26px;
-  }
-  .footer-menu__link {
-    font-size: 16px;
-  }
-  .footer-contacts {
-    margin-left: 26px;
-  }
-  .footer-contacts_top {
-    margin-top: 0;
-    margin-left: 0;
-  }
   .footer-contacts_bottom {
     margin-top: 22px;
-    margin-left: 0;
   }
+}
+@media screen and (max-width: 320px) {
+  .footer-contacts_bottom {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 768px) {
   .footer-contacts .content-container__item {
     max-width: 368px;
   }
 }
 @media screen and (max-width: 320px) {
-  .footer-contacts {
-    margin-left: 26px;
-  }
-  .footer-contacts_top {
-    margin-top: 0;
-    margin-left: 0;
-  }
-  .footer-contacts_bottom {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    margin-left: 0;
-  }
   .footer-contacts .content-container__item {
     max-width: 280px;
   }
+}
+.footer-contacts .content-container__item_bold {
+  font-size: 30px;
+}
+@media screen and (max-width: 480px) {
   .footer-contacts .content-container__item_bold {
     font-size: 25px;
   }
 }
+
 .popup__tnks {
   display: none;
   z-index: 9999;
@@ -4015,32 +4086,8 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 .block-btn_centered {
   max-width: 242px;
   min-width: 242px;
-  margin-right: 594px;
-  margin-left: 594px;
-}
-@media screen and (max-width: 1233px) {
-  .block-btn_centered {
-    margin-right: 408px;
-    margin-left: 408px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .block-btn_centered {
-    margin-right: 283px;
-    margin-left: 283px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .block-btn_centered {
-    margin-right: 104px;
-    margin-left: 104px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .block-btn_centered {
-    margin-right: 58px;
-    margin-left: 58px;
-  }
+  margin-right: calc((100% - 242px) / 2);
+  margin-left: calc((100% - 242px) / 2);
 }
 .block-btn_centered::after {
   position: absolute;
