--- a/scss/blocks/_feedback-form.scss
+++ b/scss/blocks/_feedback-form.scss
@@ -6,6 +6,28 @@
     max-width: 615px;
     max-height: 360px;
 
+    @media screen and (max-width: 1024px) {
+        display: flex;
+        flex-direction: column;
+        max-width: 400px;
+    }
+
+    @media screen and (max-width: 768px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 2fr 1fr;
+        justify-content: space-between;
+        gap: 5px;
+        max-width: 615px;
+        max-height: 360px;
+    }
+
+    @media screen and (max-width: 600px) {
+        display: flex;
+        flex-direction: column;
+        max-width: 450px;
+    }
+
     @media screen and (max-width: 480px) {
         display: flex;
         flex-direction: column;
@@ -44,6 +66,10 @@
         max-width: 298px;
         min-height: 66px;
 
+        @media screen and (max-width: 1024px) {
+            max-width: 100%;
+        }
+
         @media screen and (max-width: 480px) {
             max-width: 340px;
             min-height: 68px;
@@ -58,6 +84,11 @@
         max-width: 605px;
         min-height: 128px;
         grid-column: 1/3;
+
+        @media screen and (max-width: 1024px) {
+            max-width: 100%;
+            min-height: 100px;
+        }
 
         @media screen and (max-width: 480px) {
             max-width: 340px;
