--- a/scss/style.css
+++ b/scss/style.css
@@ -2156,6 +2156,15 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   border: 1px solid #C4C4C4;
   border-radius: 4px;
 }
+@media screen and (max-width: 1380px) {
+  .card-item {
+    max-width: 300px;
+    min-width: 300px;
+    max-height: 290px;
+    min-height: 290px;
+    padding: 16px 15px 34px 15px;
+  }
+}
 @media screen and (max-width: 1024px) {
   .card-item {
     max-width: 274px;
@@ -2325,20 +2334,13 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 }
 .service_bg-grey__image {
   max-height: 423px;
-  margin-right: 306px;
   margin-bottom: 57px;
-  margin-left: 1035px;
-}
-@media screen and (max-width: 1440px) {
-  .service_bg-grey__image {
-    margin-left: 850px;
-  }
+  margin-left: 54%;
 }
 @media screen and (max-width: 1233px) {
   .service_bg-grey__image {
     max-height: 310px;
     margin-right: 306px;
-    margin-left: 600px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -2364,18 +2366,26 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  max-height: 670px;
   min-height: 670px;
   margin-top: 0;
   background-color: #D71635;
   z-index: 0;
 }
+@media screen and (max-width: 1024px) {
+  .service_bg-red {
+    min-height: 700px;
+  }
+}
 @media screen and (max-width: 768px) {
   .service_bg-red {
     display: flex;
     flex-direction: column;
-    max-height: 835px;
     min-height: 835px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .service_bg-red {
+    min-height: 1050px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -3700,14 +3710,13 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 
 .content-container_left {
   max-width: 502px;
-  margin-top: 213px;
-  margin-left: 397px;
+  margin-top: 200px;
+  margin-left: 41%;
   line-height: 27px;
 }
 @media screen and (max-width: 1440px) {
   .content-container_left {
-    margin-top: 180px;
-    margin-left: 250px;
+    margin-top: 150px;
   }
 }
 @media screen and (max-width: 1233px) {
@@ -3715,7 +3724,11 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     max-width: 600px;
     margin-top: 180px;
     margin-right: 0;
-    margin-left: 130px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .content-container_left {
+    margin-left: 150px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -3723,6 +3736,11 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     max-width: 502px;
     margin-top: 47px;
     margin-left: 162px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .content-container_left {
+    margin-bottom: 20px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -3747,6 +3765,11 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   margin-bottom: 15px;
   font-size: 20px;
   color: #FFFFFF;
+}
+@media screen and (max-width: 1024px) {
+  .content-container_left__item {
+    font-size: 18px;
+  }
 }
 @media screen and (max-width: 768px) {
   .content-container_left__item {
@@ -3860,12 +3883,12 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 
 .content-container_right {
   max-width: 615px;
-  margin-top: 213px;
+  margin-top: 200px;
   margin-left: 119px;
 }
 @media screen and (max-width: 1440px) {
   .content-container_right {
-    margin-top: 180px;
+    margin-top: 150px;
   }
 }
 @media screen and (max-width: 1233px) {
@@ -3876,10 +3899,20 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     margin-left: 50px;
   }
 }
+@media screen and (max-width: 1024px) {
+  .content-container_right {
+    max-width: 100%;
+  }
+}
 @media screen and (max-width: 768px) {
   .content-container_right {
     min-width: 640px;
     margin: 14px 47px 46px 63px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .content-container_right {
+    margin-top: 0;
   }
 }
 @media screen and (max-width: 480px) {
@@ -3902,6 +3935,31 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   justify-content: space-between;
   max-width: 615px;
   max-height: 360px;
+}
+@media screen and (max-width: 1024px) {
+  .feedback-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .feedback-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 2fr 1fr;
+    justify-content: space-between;
+    gap: 5px;
+    max-width: 615px;
+    max-height: 360px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .feedback-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 450px;
+  }
 }
 @media screen and (max-width: 480px) {
   .feedback-form {
@@ -3944,6 +4002,11 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   max-width: 298px;
   min-height: 66px;
 }
+@media screen and (max-width: 1024px) {
+  .input-container_sm {
+    max-width: 100%;
+  }
+}
 @media screen and (max-width: 480px) {
   .input-container_sm {
     max-width: 340px;
@@ -3959,6 +4022,12 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   max-width: 605px;
   min-height: 128px;
   grid-column: 1/3;
+}
+@media screen and (max-width: 1024px) {
+  .input-container_lg {
+    max-width: 100%;
+    min-height: 100px;
+  }
 }
 @media screen and (max-width: 480px) {
   .input-container_lg {
