fix some style bugs

--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -118,6 +118,8 @@
     @media screen and (max-width: 768px) {
         flex-direction: row;
         margin-top: 35px;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     @media screen and (max-width:480px) {
