--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -28,9 +28,9 @@
             margin-left: 0;
         }
 
-        @media screen and (max-width: 768px) {
-            margin-left: -75px;
-        }
+        // @media screen and (max-width: 768px) {
+        //     margin-left: -75px;
+        // }
 
         @media screen and (max-width: 610px) {
             margin-left: -50px;
